--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,9 @@ html, body {
 }
 
 .shop-item-image {
-    max-height: 250px; /* reduce the size of image */
+	/* reduce the size of image */
+    max-height: 250px; 
+	max-width: 171px; 
     border: 1px dotted grey; /* to distinguish the image and background */ 
     border-radius: 1%; /* make the border rounded */
 }
@@ -282,8 +284,3 @@ tr:not(:first-child):not(:last-child):hover {
     background-color: #bc3737;
     cursor: pointer;    
 }
-
-
-
-
-
